# dummy-shell

./: .config  CMakeLists.txt  ISSUE #1 QUESTIONS.txt  Makefile  README.md  README_PARSER.txt  command.sh  interface.c  log.template  main.c  parser.c  pwd.sh  templatefile.txt  tryparser.c
headers/: cli_arguments_parser.h  config.h  interface.h  logger.h  loop_core.h  parser.h  process.h  shell.h  utiliteas.h
headers/util/: utiliteas.h
headers/util/collections/: linkedl.h
sources/: cli_arguments_parser.c  config.c  config_function.c  logger.c  loop_core.c  process.c  shell.c
sources/util/: utiliteas.c
sources/util/collections/: linkedl.c
src/headers/: config.h  logger.h  process.h
src/source/: cli_arguments_parser.c  logger.c  loop_core.c  process.c  shell.c
